--- a/index.html
+++ b/index.html
@@ -12,14 +12,71 @@
 <body>
   <div class="wrapper">
     <div class="container">
-      <header class="header">
+      <header class="header header_s">
+        <div class="header-container">
+          <h1 class="name-services">Качественные натяжные потолки</h1>
+        </div>
       </header>
       <nav class="nav">
+        <div class="nav-container">
+          <ul class="menu-top menu-top_s">
+            <li class="menu-top__item"><a class="menu-top__link" href="#advantages">Преимущества</a></li>
+            <li class="menu-top__item"><a class="menu-top__link" href="#our-works">Наши работы</a></li>
+            <li class="menu-top__item"><a class="menu-top__link" href="#invoices">Фактуры</a></li>
+            <li class="menu-top__item"><a class="menu-top__link" href="#technology">Технологии</a></li>
+            <li class="menu-top__item"><a class="menu-top__link" href="#reviews">Отзывы</a></li>
+          </ul>
+        </div>
       </nav>
-      <main class="main">
+      <main class="main main_s">
+        <div class="jumbotron-slider">слайдер</div>
+        <div class="main-container main-container_advantages">
+          <h3><a name="advantages">Наши преимущества</a></h3>
+        </div>
+        <div class="our-works-slider">
+          <a name="our-works">слайдер</a>
+        </div>
+        <div class="main-container main-container_consultation">
+          <h3>Хотите получить консультацию бесплатно?</h3>
+        </div>
+        <div class="invoices">
+          <div class="main-container main-container_invoices">
+            <h3><a name="invoices">Фактуры натяжных потолков</a></h3>
+          </div>
+        </div>
+        <div class="main-container main-container_technology">
+          <h3><a name="technology">Технологии натяжных потолков</a></h3>
+          <ul class="menu-technology">
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Хреновнивые</a></li>
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Бесшовные</a></li>
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Многоуровневые</a></li>
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Криволинейные</a></li>
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Звездное небо</a></li>
+            <li class="menu-technology__item"><a class="menu-technology__link" href="">Фотопечать</a></li>
+          </ul>
+        </div>
+        <div class="technology-slyder">
+          слайдер
+        </div>
+        <div class="main-container main-container_reviews">
+          <h3><a name="reviews">Отзывы о нас</a></h3>
+        </div>
+        <div class="main-container main-container_question">
+          <h3>У Вас остались к нам вопросы?</h3>
+        </div>
       </main>
     </div>
-    <footer class="footer">
+    <footer class="footer footer_s">
+      <div class="footer-container">
+        <ul class="menu-footer menu-footer_s">
+          <li class="menu-top__item"><a class="menu-footer__link" href="#advantages">Преимущества</a></li>
+          <li class="menu-top__item"><a class="menu-footer__link" href="#our-works">Наши работы</a></li>
+          <li class="menu-top__item"><a class="menu-footer__link" href="#invoices">Фактуры</a></li>
+          <li class="menu-top__item"><a class="menu-footer__link" href="#technology">Технологии</a></li>
+          <li class="menu-top__item"><a class="menu-footer__link" href="#reviews">Отзывы</a></li>
+        </ul>
+        &copy; 2017 &laquo;Горизонт&raquo; Натяжные потолки
+      </div>
     </footer>
   </div>
 </body>
