--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </div>
           <div class="feedback__item">
             <input id="feedback-n1" class="feedback__input" type="text" placeholder="Ваше имя" required="required">
-            <input id="feedback-t1" class="feedback__input" type="tel" placeholder="Ваш номер телефона" required="required">
+            <input id="feedback-t1" class="feedback__input _tel" type="tel" placeholder="Ваш номер телефона" required="required" pattern="^\+\d\(\d{3}\)\d{3}-\d{4}$">
           </div>
           <div class="feedback__item">
             <div class="feedback__call">Мы перезвоним Вам в ближайшее время</div>
@@ -694,7 +694,7 @@
           </div>
           <div class="feedback__item">
             <input id="feedback-n2" class="feedback__input" type="text" placeholder="Ваше имя">
-            <input  id="feedback-t2" class="feedback__input" type="tel" placeholder="Ваш номер телефона">
+            <input  id="feedback-t2" class="feedback__input _tel" type="tel" placeholder="Ваш номер телефона" pattern="^\+\d\(\d{3}\)\d{3}-\d{4}$">
           </div>
           <div class="feedback__item">
             <div class="feedback__call">Мы перезвоним Вам в ближайшее время</div>
